--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            height: 200px;
+            width: 200px;
+            background: rgb(203, 171, 177);
+            line-height: 200px;
+            text-align: center;
+        }
+        * {
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
     <h1>hello world</h1>
